# vision-mouse

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  MVP_VALIDATION.md  STACK.md  STRUCTURE.md  TDD.md  TESTING.md
src/vision_mouse/: __init__.py  config.py  main.py
src/vision_mouse/app/: __init__.py  bootstrap.py  composition.py
src/vision_mouse/application/: __init__.py  contracts.py  errors.py  operational.py  pipeline.py  ports.py  routing.py
src/vision_mouse/calibration/: profile.py  session.py
src/vision_mouse/capture/: __init__.py  session.py
src/vision_mouse/domain/: __init__.py  gestures.py  runtime.py  vision.py
src/vision_mouse/filters/: __init__.py  temporal.py
src/vision_mouse/gestures/: __init__.py  clicks.py  common.py  drag.py  engine.py  macros.py  navigation.py  scroll.py
src/vision_mouse/mapping/: __init__.py  cursor_mapper.py  pointer_assist.py
src/vision_mouse/observability/: __init__.py  telemetry.py
src/vision_mouse/pipeline/: __init__.py  router.py  runtime.py
src/vision_mouse/platform/macos/: __init__.py  input.py  macros.py  permissions.py  workspace.py
src/vision_mouse/vision/: __init__.py  mediapipe_provider.py
tests/: test_application_ports.py  test_bootstrap.py  test_contracts.py  test_gestures.py  test_input_adapter.py  test_main.py  test_mapping_filters.py  test_mediapipe_provider.py  test_permissions.py  test_pipeline_runtime.py  test_pointer_assist_and_calibration.py  test_router.py
